kubernetes/k3s-01/workloads/owntracks-frontend/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: owntracks-frontend
  namespace: owntracks
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: owntracks-frontend
  template:
    metadata:
      labels:
        app: owntracks-frontend
    spec:
      containers:
        - name: owntracks-frontend
          image: docker.io/owntracks/frontend:2.15.3@sha256:efa313bdec583939f6edc70eb148670a8bba1a5aed0508a326f5b2f2751d0861
          ports:
            - containerPort: 80
