kubernetes/k3s-01/workloads/owntracks-frontend/ingress-route.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: owntracks-frontend
  namespace: owntracks
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`owntracks.47fc5c.com`)
      kind: Rule
      services:
        - name: owntracks-frontend
          kind: Service
          port: 80
          scheme: http
  tls:
    secretName: owntracks-certificate
