kubernetes/k3s-01/workloads/owntracks-frontend/network-policy.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: owntracks-frontend
  namespace: owntracks
spec:
  policyTypes:
    - Ingress
    - Egress
  podSelector:
    matchLabels:
      app: owntracks-frontend
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 80
  egress:
    - to:
      - podSelector:
          matchLabels:
            app: owntracks-recorder
      ports:
        - protocol: TCP
          port: 8083
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: kube-system
        podSelector:
          matchLabels:
            k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
